load("@build_bazel_rules_nodejs//:index.bzl", "js_library")
load("//aio/tools:defaults.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

nodejs_binary(
    name = "build-ngsw-config",
    data = [
        "//aio:firebase.json",
        "//aio:ngsw-config.template.json",
        "@aio_npm//canonical-path",
        "@aio_npm//json5",
    ],
    entry_point = "build-ngsw-config.js",
)

js_library(
    name = "fast-serve-and-watch",
    srcs = [
        "fast-serve-and-watch.js",
    ],
    deps = [
        "//aio/tools/transforms/authors-package:watchdocs",
        "@aio_npm//@angular-devkit/architect-cli",
    ],
)
