package(default_visibility = ["//visibility:public"])

filegroup(
    name = "files",
    srcs = [
        "BUILD.bazel",
        "expand_template.bzl",
        "extract_js_module_output.bzl",
        "//dev-infra/bazel/api-golden:files",
        "//dev-infra/bazel/browsers:files",
        "//dev-infra/bazel/remote-execution:files",
    ],
)
