load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "caretaker",
    srcs = [
        "cli.ts",
    ],
    module_name = "@angular/dev-infra-private/caretaker",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/caretaker/check",
        "@npm//@types/yargs",
        "@npm//yargs",
    ],
)

ts_library(
    name = "config",
    srcs = [
        "config.ts",
    ],
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
    ],
)
