load("//dev-infra:defaults.bzl", "jasmine_node_test", "ts_library")

ts_library(
    name = "caretaker",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/release/versioning",
        "//dev-infra/utils",
        "@npm//@types/inquirer",
        "@npm//@types/node",
        "@npm//@types/node-fetch",
        "@npm//@types/yargs",
        "@npm//inquirer",
        "@npm//multimatch",
        "@npm//node-fetch",
        "@npm//typed-graphqlify",
        "@npm//yaml",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":caretaker",
        "//dev-infra/release/versioning",
        "//dev-infra/utils",
        "//dev-infra/utils/testing",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//@types/semver",
        "@npm//semver",
    ],
)

jasmine_node_test(
    name = "test",
    deps = [
        ":test_lib",
    ],
)
