load("//tools:defaults.bzl", "jasmine_node_test")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "commit-message",
    srcs = [
        "builder.ts",
        "cli.ts",
        "commit-message-draft.ts",
        "config.ts",
        "parse.ts",
        "restore-commit-message.ts",
        "validate.ts",
        "validate-file.ts",
        "validate-range.ts",
        "wizard.ts",
    ],
    module_name = "@angular/dev-infra-private/commit-message",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/inquirer",
        "@npm//@types/node",
        "@npm//@types/shelljs",
        "@npm//@types/yargs",
        "@npm//inquirer",
        "@npm//shelljs",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = [
        "builder.spec.ts",
        "parse.spec.ts",
        "validate.spec.ts",
    ],
    deps = [
        ":commit-message",
        "//dev-infra/utils",
        "@npm//@types/events",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//inquirer",
    ],
)

jasmine_node_test(
    name = "test",
    bootstrap = ["//tools/testing:node_no_angular_es5"],
    deps = [
        "test_lib",
    ],
)
