load("//tools:defaults.bzl", "jasmine_node_test")
load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "commit-message",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@angular/dev-infra-private/commit-message",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/conventional-commits-parser",
        "@npm//@types/git-raw-commits",
        "@npm//@types/inquirer",
        "@npm//@types/node",
        "@npm//@types/shelljs",
        "@npm//@types/yargs",
        "@npm//conventional-commits-parser",
        "@npm//git-raw-commits",
        "@npm//inquirer",
        "@npm//shelljs",
        "@npm//yargs",
    ],
)

ts_library(
    name = "test_lib",
    testonly = True,
    srcs = glob(["**/*.spec.ts"]),
    deps = [
        ":commit-message",
        "//dev-infra/utils",
        "@npm//@types/events",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//inquirer",
    ],
)

jasmine_node_test(
    name = "test",
    bootstrap = ["//tools/testing:node_no_angular_es5"],
    deps = [
        ":test_lib",
    ],
)
