load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "format",
    srcs = glob([
        "**/*.ts",
    ]),
    module_name = "@angular/dev-infra-private/format",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/cli-progress",
        "@npm//@types/node",
        "@npm//@types/shelljs",
        "@npm//@types/yargs",
        "@npm//cli-progress",
        "@npm//multimatch",
        "@npm//shelljs",
        "@npm//yargs",
    ],
)
