load("//dev-infra:defaults.bzl", "ts_library")

ts_library(
    name = "format",
    srcs = glob([
        "**/*.ts",
    ]),
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/cli-progress",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//cli-progress",
        "@npm//multimatch",
        "@npm//yargs",
    ],
)
