load("@npm//@bazel/typescript:index.bzl", "ts_library")

ts_library(
    name = "misc",
    srcs = glob(["**/*.ts"]),
    module_name = "@angular/dev-infra-private/misc/",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/release/build",
        "//dev-infra/release/config",
        "//dev-infra/utils",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//chalk",
    ],
)
