load("//dev-infra:defaults.bzl", "ts_library")

ts_library(
    name = "ngbot",
    srcs = [
        "cli.ts",
        "verify.ts",
    ],
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/node",
        "@npm//@types/yaml",
        "@npm//@types/yargs",
        "@npm//yaml",
        "@npm//yargs",
    ],
)
