load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "pr",
    srcs = ["cli.ts"],
    module_name = "@angular/dev-infra-private/pr",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/pr/discover-new-conflicts",
        "//dev-infra/pr/merge",
        "@npm//@types/yargs",
    ],
)
