load("//dev-infra:defaults.bzl", "ts_library")

ts_library(
    name = "pr",
    srcs = ["cli.ts"],
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/pr/check-target-branches",
        "//dev-infra/pr/checkout",
        "//dev-infra/pr/discover-new-conflicts",
        "//dev-infra/pr/merge",
        "//dev-infra/pr/rebase",
        "@npm//@types/yargs",
    ],
)
