load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "pullapprove",
    srcs = [
        "cli.ts",
        "condition_evaluator.ts",
        "group.ts",
        "logging.ts",
        "parse-yaml.ts",
        "verify.ts",
    ],
    module_name = "@angular/dev-infra-private/pullapprove",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/minimatch",
        "@npm//@types/node",
        "@npm//@types/shelljs",
        "@npm//@types/yaml",
        "@npm//@types/yargs",
        "@npm//minimatch",
        "@npm//shelljs",
        "@npm//yaml",
        "@npm//yargs",
    ],
)
