load("//dev-infra:defaults.bzl", "jasmine_node_test", "ts_library")

ts_library(
    name = "pullapprove",
    srcs = [
        "cli.ts",
        "condition_evaluator.ts",
        "group.ts",
        "logging.ts",
        "parse-yaml.ts",
        "pullapprove_arrays.ts",
        "utils.ts",
        "verify.ts",
    ],
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils",
        "@npm//@types/minimatch",
        "@npm//@types/node",
        "@npm//@types/yaml",
        "@npm//@types/yargs",
        "@npm//minimatch",
        "@npm//yaml",
        "@npm//yargs",
    ],
)

ts_library(
    name = "pullapprove_test_lib",
    testonly = True,
    srcs = glob(
        ["*.spec.ts"],
    ),
    visibility = ["//visibility:private"],
    deps = [
        ":pullapprove",
        "@npm//@types/jasmine",
        "@npm//@types/node",
        "@npm//typescript",
    ],
)

jasmine_node_test(
    name = "pullapprove_test",
    srcs = [":pullapprove_test_lib"],
    visibility = ["//visibility:private"],
)
