load("//dev-infra:defaults.bzl", "ts_library")

ts_library(
    name = "release",
    srcs = glob([
        "**/*.ts",
    ]),
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/release/build",
        "//dev-infra/release/info",
        "//dev-infra/release/notes",
        "//dev-infra/release/publish",
        "//dev-infra/release/set-dist-tag",
        "//dev-infra/utils",
        "@npm//@types/node",
        "@npm//@types/semver",
        "@npm//@types/yargs",
        "@npm//semver",
        "@npm//yargs",
    ],
)
