load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "ts-circular-dependencies",
    srcs = glob(["*.ts"]),
    devmode_target = "es5",
    module_name = "@angular/dev-infra-private/ts-circular-dependencies",
    tsconfig = "//dev-infra:tsconfig.json",
    visibility = ["//dev-infra:__subpackages__"],
    deps = [
        "//dev-infra/utils:config",
        "@npm//@types/glob",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//chalk",
        "@npm//tslib",
        "@npm//typescript",
    ],
)
